--- a/projects/Covid-19/index.html
+++ b/projects/Covid-19/index.html
@@ -14,6 +14,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch-jsonp/1.0.6/fetch-jsonp.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="./class.js"></script>
   <script src="./index.js"></script>
   <script>initPage();</script>
 </body>
