--- a/projects/Covid-19/index.html
+++ b/projects/Covid-19/index.html
@@ -18,12 +18,13 @@
     <hr class="sep" />
   </header>
 
-  <canvas id="chart" width="400" height="400"></canvas>
+  <canvas id="chart"></canvas>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch-jsonp/1.0.6/fetch-jsonp.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="./js/class.js"></script>
   <script src="./js/functions.js"></script>
+  <script src="./js/chart.js"></script>
   <script src="./js/index.js"></script>
   <script>initPage();</script>
 </body>
