--- a/projects/Covid-19/index.html
+++ b/projects/Covid-19/index.html
@@ -32,22 +32,24 @@
         <span>Loading</span>
       </div>
     </div>
-    
+    <button class="btn world" id="World">World</button>
     <aside class="button-container">
       <button class="btn" id="Asia">Asia</button>
+      <button class="btn" id="Africa">Africa</button>
       <button class="btn" id="Oceania">Oceania</button>
-      <button class="btn world" id="World">World</button>
       <button class="btn" id="Americas">Americas</button>
       <button class="btn" id="Europe">Europe</button>
     </aside>
+
     <aside class="glossary-container">
       <ul class="glossary">
-        <li><a href="#" class="confirmed"><i class="fas fa-virus"></i> confirmed</a></li>
-        <li><a href="#" class="deaths"><i class="fas fa-skull-crossbones"></i> deaths</a></li>
-        <li><a href="#" class="recovered"><i class="far fa-heart"></i> recovered</a></li>
-        <li><a href="#" class="critical"><i class="fas fa-temperature-high"></i> critical</a></li>
+        <li><a href="#" id="confirmed"><i class="fas fa-virus"></i> confirmed</a></li>
+        <li><a href="#" id="deaths"><i class="fas fa-skull-crossbones"></i> deaths</a></li>
+        <li><a href="#" id="recovered"><i class="far fa-heart"></i> recovered</a></li>
+        <li><a href="#" id="critical"><i class="fas fa-temperature-high"></i> critical</a></li>
       </ul>
     </aside>
+
     <select name="world" id="my-select" class="select">
       <option selected disabled hidden>World</option>
       <option class="option" value="Asia">Asia</option>
