--- a/projects/Covid-19/index.html
+++ b/projects/Covid-19/index.html
@@ -32,13 +32,13 @@
         <span>Loading</span>
       </div>
     </div>
-    <button class="btn world" id="World">World</button>
+    <button disabled class="btn world" id="World">World</button>
     <aside class="button-container">
-      <button class="btn" id="Asia">Asia</button>
-      <button class="btn" id="Africa">Africa</button>
-      <button class="btn" id="Oceania">Oceania</button>
-      <button class="btn" id="Americas">Americas</button>
-      <button class="btn" id="Europe">Europe</button>
+      <button disabled class="btn" id="Asia">Asia</button>
+      <button disabled class="btn" id="Africa">Africa</button>
+      <button disabled class="btn" id="Oceania">Oceania</button>
+      <button disabled class="btn" id="Americas">Americas</button>
+      <button disabled class="btn" id="Europe">Europe</button>
     </aside>
 
     <aside class="glossary-container">
@@ -58,10 +58,13 @@
       <option class="option" value="Americas">Americas</option>
       <option class="option" value="Europe">Europe</option>
     </select>
+    
+    <h1 class="title header">country details:</h1>
+    <div class="country-details">
+
+    </div>
   </section>
   
-
-  </select>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch-jsonp/1.0.6/fetch-jsonp.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="./js/class.js"></script>
