--- a/projects/Covid-19/index.html
+++ b/projects/Covid-19/index.html
@@ -50,7 +50,7 @@
       </ul>
     </aside>
 
-    <select name="world" id="my-select" class="select">
+    <select name="world" id="my-select" class="select" disabled>
       <option selected disabled hidden>World</option>
       <option class="option" value="Asia">Asia</option>
       <option class="option" value="Oceania">Oceania</option>
@@ -59,9 +59,50 @@
       <option class="option" value="Europe">Europe</option>
     </select>
     
-    <h1 class="title header">country details:</h1>
+    <h1 class="title header" id="country-name">Country Details:</h1>
     <div class="country-details">
-
+      <div class="detail">
+        <p>Total cases:</p>
+        <hr class="sep" />
+        <div class="number-container">
+          <span class="number" id="confirmed"></span>
+        </div>
+      </div>
+      <div class="detail">
+        <p>New cases:</p>
+        <hr class="sep" />
+        <div class="number-container">
+          <span class="number" id="newCases"></span>
+        </div>
+      </div>
+      <div class="detail">
+        <p>Total death:</p>
+        <hr class="sep" />
+        <div class="number-container">
+          <span class="number" id="deaths"></span>
+        </div>
+      </div>
+      <div class="detail">
+        <p>New death:</p>
+        <hr class="sep" />
+        <div class="number-container">
+          <span class="number" id="newDeaths"></span>
+        </div>
+      </div>
+      <div class="detail">
+        <p>Total recovered:</p>
+        <hr class="sep" />
+        <div class="number-container">
+          <span class="number" id="recovered"></span>
+        </div>
+      </div>
+      <div class="detail">
+        <p>Critical condition:</p>
+        <hr class="sep" />
+        <div class="number-container">
+          <span class="number" id="critical"></span>
+        </div>
+      </div>
     </div>
   </section>
   
