--- a/projects/Covid-19/index.html
+++ b/projects/Covid-19/index.html
@@ -9,6 +9,11 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/load.css">
+  <link rel="stylesheet" href="./css/buttons.css">
+  <link rel="stylesheet" href="./css/canvas.css">
+  <link rel="stylesheet" href="./css/category.css">
+  <link rel="stylesheet" href="./css/mediaQuery.css">
+  <link rel="stylesheet" href="./css/details.css">
   <title>Covid 19 API</title>
   
 </head>
